# llm-engineers-handbook

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  ruff.toml
notebook/: nanoGPT.ipynb  tokenizer.ipynb
